cli/tests/testdata/test/no_check.out

test result: ok. 0 passed; 0 failed; 0 ignored; 0 measured; 0 filtered out ([WILDCARD])

error: Uncaught TypeError: Cannot read properties of undefined (reading 'fn')
Deno.test();
     ^
    at [WILDCARD]
    at [WILDCARD]/test/no_check.ts:1:6
